test/mock/plugins/invalid/invalid-response-method.js
module.exports = {
  service: 'lambda',
  methods: {
    foo: {
      response: true,
    }
  }
}
